# bicycle_rent

./: README.md
backend/: pyproject.toml
backend/api_v1/: urls.py
backend/backend/: settings.py  urls.py
backend/bicycle_rent/: admin.py  apps.py  models.py  urls.py
backend/users/: admin.py  models.py  urls.py
